# quickerMGBA

./: .gitmodules  README.md  meson.build
source/: bizinterface.c  inputParser.hpp  mgbaInstanceBase.hpp  playbackInstance.hpp  player.cpp  tester.cpp
source/base/: meson.build  mgbaInstance.hpp
source/new/: meson.build  mgbaInstance.hpp
tests/: anotherWorld.bios.sol  anotherWorld.bios.test  anotherWorld.playaround.test  meson.build  run_test.sh  tollrunner.playaround.sol  tollrunner.playaround.test
tests/roms/: .gitignore  README.md
